<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.sudokosolver.SudokuBoard
        android:id="@+id/sudokuBoard"
        android:layout_width="402dp"
        android:layout_height="396dp"
        android:layout_marginBottom="1dp"
        app:boardColor="#000000"
        app:cellFillColor="#6600DDFF"
        app:cellsHighlightColor="#2600DDFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:letterColor="@color/black"
        app:letterColorError="#DF4747"
        app:letterColorSolve="#A2DF5B" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="166dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="124dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sudokuBoard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNOnePress"
                android:text="@string/One"
                app:iconTint="#FFFFFF" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNTwoPress"
                android:text="@string/Two" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNThreePress"
                android:text="@string/Three" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNFourPress"
                android:text="@string/Four" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNFivePress"
                android:text="@string/Five" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNSixPress"
                android:text="@string/Six" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:onClick="BTNSevenPress"
                android:text="@string/Seven" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNEightPress"
                android:text="@string/Eight" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNNinePress"
                android:text="@string/Nine" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="39dp"
        android:onClick="solve"
        android:text="@string/solve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>
